--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Brands</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th colspan="3"></th>
@@ -13,13 +11,7 @@
     <% @brands.each do |brand| %>
       <tr>
         <td><%= link_to 'Show', brand %></td>
-        <td><%= link_to 'Edit', edit_brand_path(brand) %></td>
-        <td><%= link_to 'Destroy', brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Brand', new_brand_path %>
