--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,4 +1,21 @@
-<p id="notice"><%= notice %></p>
+<h1>Images for <%= @brand.name %></h1>
 
-<%= link_to 'Edit', edit_brand_path(@brand) %> |
+<div id="masonry-container" class="transitions-enabled clearfix">
+
+  <div class="box">
+    <p><a href="http://www.flickr.com/photos/nemoorange/3319714470/" title="Whitlow's on Wilson by nemoorange, on Flickr"><img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" /></a></p>
+  </div>
+
+  <div class="box">
+    <p><a href="http://www.flickr.com/photos/nemoorange/3319714470/" title="Whitlow's on Wilson by nemoorange, on Flickr"><img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" /></a></p>
+  </div>
+
+  <div class="box">
+    <p>
+      <a href="http://www.flickr.com/photos/nemoorange/3319714470/" title="Whitlow's on Wilson by nemoorange, on Flickr"><img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" /></a>
+    </p>
+  </div>
+</div>
+<div class="clearfix"></div>
+
 <%= link_to 'Back', brands_path %>
