isotope setup for brand images

--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,19 +1,42 @@
 <h1>Images for <%= @brand.name %></h1>
 
-<div id="masonry-container" class="transitions-enabled clearfix">
-
-  <div class="box">
-    <p><a href="http://www.flickr.com/photos/nemoorange/3319714470/" title="Whitlow's on Wilson by nemoorange, on Flickr"><img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" /></a></p>
+<div id="masonry-container" class="transitions-enabled">
+  <div class="grid-sizer"></div>
+  <div class="grid-item">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
   </div>
-
-  <div class="box">
-    <p><a href="http://www.flickr.com/photos/nemoorange/3319714470/" title="Whitlow's on Wilson by nemoorange, on Flickr"><img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" /></a></p>
+  <div class="grid-item grid-item--width2">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson"/>
   </div>
-
-  <div class="box">
-    <p>
-      <a href="http://www.flickr.com/photos/nemoorange/3319714470/" title="Whitlow's on Wilson by nemoorange, on Flickr"><img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" /></a>
-    </p>
+  <div class="grid-item">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+  </div>
+  <div class="grid-item grid-item--width2">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+  </div>
+  <div class="grid-item">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+  </div>
+  <div class="grid-item grid-item--width2">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+  </div>
+  <div class="grid-item">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+  </div>
+  <div class="grid-item grid-item--width2">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+  </div>
+  <div class="grid-item">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+  </div>
+  <div class="grid-item grid-item--width2">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+  </div>
+  <div class="grid-item">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+  </div>
+  <div class="grid-item grid-item--width2">
+    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
   </div>
 </div>
 <div class="clearfix"></div>
