--- a/app/assets/stylesheets/brands.scss
+++ b/app/assets/stylesheets/brands.scss
@@ -1,19 +1,10 @@
-#masonry-container {
-  background: #FFF;
-  padding: 5px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  clear: both;
+/* fluid 5 columns */
+.grid-item { width: 20%; }
+.grid-item--width2 {
+  width: 40%;
 }
 
-.col1 { width: 80px; }
-.col2 { width: 180px; }
-.col3 { width: 280px; }
-.col4 { width: 380px; }
-.col5 { width: 480px; }
-
-.col1 img { max-width: 80px; }
-.col2 img { max-width: 180px; }
-.col3 img { max-width: 280px; }
-.col4 img { max-width: 380px; }
-.col5 img { max-width: 480px; }
+img {
+  width: 100%;
+  height: 100px;
+}
