--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,17 +1,3 @@
-<h1>Listing Brands</h1>
+<h1>Brands</h1>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @brands.each do |brand| %>
-      <tr>
-        <td><%= link_to 'Show', brand %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div id="brands-js-grid"></div>
