--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,43 +1,11 @@
 <h1>Images for <%= @brand.name %></h1>
 
 <div id="masonry-container" class="transitions-enabled">
-  <div class="grid-sizer"></div>
+  <% @brand.images.each do |image| %>
   <div class="grid-item">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
+    <img src="<%= image.source %>"/>
   </div>
-  <div class="grid-item grid-item--width2">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson"/>
-  </div>
-  <div class="grid-item">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
-  <div class="grid-item grid-item--width2">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
-  <div class="grid-item">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
-  <div class="grid-item grid-item--width2">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
-  <div class="grid-item">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
-  <div class="grid-item grid-item--width2">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
-  <div class="grid-item">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
-  <div class="grid-item grid-item--width2">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
-  <div class="grid-item">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
-  <div class="grid-item grid-item--width2">
-    <img src="http://farm4.static.flickr.com/3008/3319714470_c05a5cb5a8_m.jpg" alt="Whitlow's on Wilson" />
-  </div>
+  <% end %>
 </div>
 <div class="clearfix"></div>
 
