--- a/app/assets/stylesheets/brands.scss
+++ b/app/assets/stylesheets/brands.scss
@@ -1,7 +1,13 @@
 /* fluid 5 columns */
-.grid-item { width: 20%; }
+.grid-item {
+  width: calc(200px + 1em);
+  padding: .5em;
+  border: 1px solid #333;
+  margin: 5px;
+  background: #eee;
+}
 
 img {
-  width: 100%;
-  height: 100px;
+  width: 200px;
+  height: 200px;
 }
