--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -7,6 +7,9 @@
 <%= link_to 'HQ Matches', '?quality=High', class: 'btn btn-primary' %>
 <%= link_to 'Most Popular', '?popular=true', class: 'btn btn-primary' %>
 <%= link_to 'Least Popular', '?popular=false', class: 'btn btn-primary' %>
+<%= link_to 'Most Recent', '?recent=true', class: 'btn btn-primary' %>
+<%= link_to 'Oldest', '?recent=false', class: 'btn btn-primary' %>
+<%= link_to 'Neighbors', '?neighbors=1', class: 'btn btn-primary' %>
 <br>
 <%= paginate @paged_images %>
 <div id="masonry-container" class="transitions-enabled">
