spruce up welcome page :kappa:

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,3 @@
 <h1>Hi</h1>
+<h2>This was made by <a href="mailto:thekylemontag@gmail.com">Kyle Montag</a></h2>
+<%= link_to 'BRANDS', brands_path, class: 'btn btn-primary btn-lg' %>
